# rslam_dev

ba/: CMakeLists.txt  package.xml
back_end/: CMakeLists.txt  package.xml
back_end/cfg/: BackEndParams.cfg
back_end/src/: BackEnd.cpp  back_end.cpp
calibu/: CMakeLists.txt  package.xml
common/: CMakeLists.txt  package.xml
common_front_end/: CMakeLists.txt  package.xml
common_front_end/cfg/: CommonFrontEndParams.cfg  FAST.cfg  FREAK.cfg  SURF.cfg
common_front_end/include/common_front_end/: CommonFrontEndCVars.h  CommonFrontEndConfig.h  DenseAlignment.h  EssentialMatrix.h  FastPyramidDetector.h  Feature.h  FeatureHandler.h  FeatureImage.h  FeatureMatch.h  FlybyFeatureDetector.h  FlybyPyramidFeatureDetector.h  FrontendInterface.h  FundamentalMatrix.h  MatchHelpers.h  PatchMatch.h  QuadTree.h  Ransac.h  SparseSimData.h  SystemStatus.h  TrackingStats.h  Triangulation.h  common_front_end_fwd.h  front_end.h
common_front_end/src/: CommonFrontEndCVars.cpp  DenseAlignment.cpp  Feature.cpp  FeatureHandler.cpp  FeatureImage.cpp  FeatureMatch.cpp  FrontendInterface.cpp  PatchMatch.cpp  QuadTree.cpp  SparseSimData.cpp  Triangulation.cpp  front_end.cpp
feature_utils/: CMakeLists.txt  package.xml
feature_utils/cfg/: FAST.cfg  FREAK.cfg  Feature.cfg  (+1 more)
features/: CMakeLists.txt  package.xml
geocon/: CMakeLists.txt  LICENSE  README.md  package.xml
geocon/geotrans/: CMakeLists.txt
geocon/geotrans/CCS/: CMakeLists.txt  Makefile
geocon/geotrans/CCS/src/dtcc/: egm2008_geoid_grid.cpp
geocon/geotrans/CCS/src/dtcc/CoordinateSystems/datum/: DatumLibraryImplementation.cpp
geocon/geotrans/CCS/src/dtcc/CoordinateSystems/mgrs/: MGRS.cpp
geocon/geotrans/CCS/src/dtcc/CoordinateSystems/usng/: USNG.cpp
geocon/geotrans/data/: .gitignore
local_map/: CMakeLists.txt  package.xml
miniglog/: CMakeLists.txt  package.xml
non_free/: CMakeLists.txt  package.xml
optimization/: CMakeLists.txt  package.xml
pb_msgs/: CMakeLists.txt  package.xml
pb_msgs/include/pb_msgs/: Camera.pb.cc  Camera.pb.h  CameraModel.pb.cc  CameraModel.pb.h  CarPlanner.pb.cc  CarPlanner.pb.h  Encoder.pb.cc  Encoder.pb.h  FrameObject.pb.cc  FrameObject.pb.h  Header.pb.cc  Header.pb.h  Image.h  Image.pb.cc  Image.pb.h  ImageArray.h  ImagePyramid.h  Imu.pb.cc  Imu.pb.h  Lidar.pb.cc  Lidar.pb.h  Logger.h  Matrix.h  Matrix.pb.cc  Matrix.pb.h  Messages.pb.cc  Messages.pb.h  NodeCamMessage.pb.cc  NodeCamMessage.pb.h  NodeCar.pb.cc  NodeCar.pb.h  Pose.pb.cc  Pose.pb.h  Reader.h  SceneGraphShapes.pb.cc  SceneGraphShapes.pb.h  SimMessages.pb.cc  SimMessages.pb.h  SlamServer.pb.cc  SlamServer.pb.h  (+9 more)
pb_msgs/src/: FrameObject.proto  Image.cpp  Logger.cpp  Reader.cpp  SlamServer.proto  dbow.proto  frontend.proto  rslam.proto  template.proto
place_matching/: CMakeLists.txt  CMakeLists.txt.old  package.xml
place_matching/include/place_matching/: PlaceMatcher.h  PlaceMatcherFactory.h  place_match_candidate.h  place_matcher.h  place_matcher_factory.h
place_matching/include/place_matching/DBoWMatcher/: DBoWMatcher.h  FMat32F.h  FMat8UBinary.h  dbow_protobuf.h
place_matching/include/place_matching/DBoWMatcher/DBoW2/: DBoW2.h  TemplatedDatabase.h  TemplatedVocabulary.h
place_matching/include/place_matching/DBoWMatcher/DLoopDetector/: DLoopDetector.h  TemplatedLoopDetector.h
place_matching/include/place_matching/DBoWMatcher/DUtils/: LineFile.h  Profiler.h  StringFunctions.h  Timestamp.h
place_matching/include/place_matching/DBoWMatcher/DVision/: DVision.h  Matches.h
place_matching/include/place_matching/MultiDBoWMatcher/: MultiDBoWMatcher.h  Persistence.h
place_matching/include/place_matching/TemplateMatcher/: TemplateMatcher.cpp  TemplateMatcher.h
place_matching/src/: PlaceMatcher.cpp  PlaceMatcherFactory.cpp
place_matching/src/DBoWMatcher/: .gitignore  CMakeLists.txt  DBoWMatcher.cpp  DBoWMatcher.h  FMat32F.cpp  FMat8UBinary.cpp  dbow_config.h.in  dbow_protobuf.h
place_matching/src/DBoWMatcher/DBoW2/: BowVector.cpp  FSurf64.cpp  FeatureVector.cpp  QueryResults.cpp  ScoringObject.cpp  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h
place_matching/src/DBoWMatcher/DLoopDetector/: DLoopDetector.h  TemplatedLoopDetector.cpp  TemplatedLoopDetector.h
place_matching/src/DBoWMatcher/DUtils/: BinaryFile.cpp  BinaryFile.h  ConfigFile.cpp  ConfigFile.h  DException.h  DebugFunctions.cpp  FileFunctions.cpp  FileFunctions.h  LUT.cpp  LineFile.cpp  Profiler.cpp  Random.cpp  STL.h  StringFunctions.cpp  TimeManager.cpp  Timestamp.cpp
place_matching/src/DBoWMatcher/DUtilsCV/: CvVersion.h  Drawing.cpp  GUI.cpp  Geometry.cpp  IO.cpp  Mat.cpp  Transformations.cpp  Types.cpp
place_matching/src/DBoWMatcher/DVision/: BundleCamera.cpp  FSolver.cpp  FSolver.h  HSolver.cpp  ImageFunctions.cpp  Matches.cpp  PLYFile.cpp  PMVSCamera.cpp  PatchFile.cpp  PixelPointFile.cpp  SurfSet.cpp  SurfSet.h
place_matching/src/DBoWMatcher/createvoc/: CMakeLists.txt  main.cpp
place_matching/src/DBoWMatcher/test/: CMakeLists.txt  LoopApp.cpp  LoopApp.h  main.cpp
place_matching/src/MultiDBoWMatcher/: AdjacencyWindow.cpp  AdjacencyWindowManager.cpp  CMakeLists.txt  LandmarkVisitor.cpp  MultiDBoWMatcher.cpp  Node.cpp  Parameters.cpp  Persistence.cpp  Session.cpp  WindowTrack.cpp  WindowVisitor.cpp
place_matching/src/TemplateMatcher/: CMakeLists.txt  TemplateMatcher.cpp  TemplateMatcher.h
rslam_engine/: CMakeLists.txt  package.xml
sdtrack/: CMakeLists.txt  package.xml
semidense_front_end/: CMakeLists.txt  package.xml
slam_map/: CMakeLists.txt  CMakeLists.txt.orig  package.xml
slam_server/: CMakeLists.txt  package.xml
sophus/: CMakeLists.txt  package.xml
sparse_front_end/: CMakeLists.txt  package.xml
sparse_tracking/: CMakeLists.txt  package.xml
utils/: CMakeLists.txt  package.xml
utils/include/utils/: AndroidHelpers.h  AtomicQueue.h  CTrackHomography.h  CVarHelpers.h  ESM.h  ImageProcessing.h  LogInfo.h  MathTypes.h  PatchUtils.h  PoseHelpers.h  PrintMatrix.h  PrintMessage.h  Timer.h  Utils.h
utils/src/: CTrackHomography.cpp  ESM.cpp  ImageProcessing.cpp  PatchUtils.cpp  PrintMessage.cpp  Utils.cpp
(+208 files in other folders)
