<?xml version="1.0"?>
<package>
  <name>common_front_end</name>
  <version>0.0.0</version>
  <description>The common_front_end package</description>

  <maintainer email="liz@todo.todo">liz</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>common</build_depend>
  <build_depend>calibu</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>pb_msgs</build_depend>
  <build_depend>slam_map</build_depend>
  <build_depend>place_matching</build_depend>
  <build_depend>optimization</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>common</run_depend>
  <run_depend>calibu</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>pb_msgs</run_depend>
  <run_depend>slam_map</run_depend>
  <run_depend>place_matching</run_depend>
  <run_depend>optimization</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
