<?xml version="1.0"?>
<package>
  <name>utils</name>
  <version>0.0.0</version>
  <description>The utils package</description>

  <maintainer email="liz@todo.todo">liz</maintainer>
  
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>common</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>sophus</build_depend>
  <build_depend>miniglog</build_depend>
  <build_depend>calibu</build_depend>
  <build_depend>non_free</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sophus</run_depend>
  <run_depend>common</run_depend>
  <run_depend>miniglog</run_depend>
  <run_depend>calibu</run_depend>
  <run_depend>non_free</run_depend>

</package>
